tests/conformance/accept/import-type/measures.ts
export type Meters = bigint;
export function addMeters(a: Meters, b: Meters): Meters {
  return a + b;
}
