tests/conformance/reject/0090-import-cycle/a.ts
import { b } from './entry';
export function a(): bigint {
  return b();
}
